# suite_trading

./: .aiignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  Plan.md  README.md  ROADMAP.md  TODO.md  TODO_steps.md  prompts.md  pyproject.toml  test_iterative_processing.py
.aiassistant/rules/: project-guidelines.md
.claude/commands/: fbn.md  gs.md
.junie/: guidelines.md
docs/: FAQ.md  bar-time-intervals.md  event_feed_usage_guide.md
examples/: minimal_strategy.py  price_patterns.py  show_demo_bars.ipynb  show_demo_bars.py
examples/.ipynb_checkpoints/: hardcoded_zig_zag_function-checkpoint.py  modified_zig_zag_function-checkpoint.py  price_patterns-checkpoint.py  show_demo_bars-checkpoint.py
src/suite_trading/: __init__.py  strategy.py  trading_engine.py
src/suite_trading/data/: __init__.py  price_type.py  quote_tick.py  trade_tick.py
src/suite_trading/data/bar/: __init__.py  bar.py  bar_type.py  bar_unit.py
src/suite_trading/demo/: __init__.py  patterns.py
src/suite_trading/demo/generators/: __init__.py  bars.py
src/suite_trading/domain/: __init__.py  account_info.py  event.py  instrument.py  position.py
src/suite_trading/domain/market_data/: __init__.py  order_book.py  price_event.py  price_sample.py  price_sample_source.py  (+2 more)
src/suite_trading/indicators/: base.py  protocol.py
src/suite_trading/messaging/: __init__.py  topic_protocol.py
src/suite_trading/platform/: __init__.py  cache.py
src/suite_trading/strategy/: __init__.py  base.py  strategy.py  strategy_state.py  strategy_state_machine.py
src/suite_trading/utils/: __init__.py  datetime_format.py  datetime_tools.py  datetime_utils.py  float_tools.py  id_generator.py  math.py  notional.py  numeric_tools.py  order_builder.py  state_machine.py  types.py
tests/: __init__.py  test_basic_flow.py  test_two_trade_demo_strategy.py
tests/helpers/: helper_bars.py  helper_instrument.py  helper_order_book.py  helper_price_pattern.py  test_assistant.py
tests/integration/: test_basic_flow.py  test_limit_order_order_book_scenarios.py  test_two_trade_demo_strategy.py
tests/integration/engine/: test_engine_order_routing_market.py  test_trading_engine_order_book_chronology.py
tests/integration/suite_trading/: test_playground.py
tests/unit/: test_instrument_examples.py
(+160 files in other folders)
