[build-system]
requires = ["uv_build>=0.7.13,<0.8.0"]
build-backend = "uv_build"

[project]
name = "suite_trading"
version = "0.0.1"
description = "Simple, Understandable, Intuitive Trading Engine (SUITE)"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pytest>=8.3.5",
    "pandas>=2.3.0",
    "pandas-stubs==2.3.0.250703",
]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "pytest==8.4.0",
    "jupyterlab>=4.4.3",
    "jupytext==1.17.2",
    "plotly>=6.1.2",
]

[tool.uv]
default-groups = "all"

# Configuration for Pytest
[tool.pytest.ini_options]
pythonpath = ["src", ]
testpaths = ["tests", ]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Configuration for Ruff
[tool.ruff]
fix = true
show-fixes = true
line-length = 150

[tool.setuptools.packages.find]
where = ["src"]

[tool.jupytext]
formats = "ipynb,py:percent"
